# asterel

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  .impeccable.md  .tarpaulin.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-MIT  README.md  SECURITY.md  SUPPORT.md  cliff.toml  clippy.toml  deny.toml  docker-compose.yml
.cargo/: config.toml
.clusterfuzzlite/: Dockerfile  build.sh
.config/: nextest.toml
.githooks/: pre-push
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/setup-protoc/: action.yml  download_protoc.py
.github/workflows/: cflite_batch.yml  cflite_cron.yml  cflite_pr.yml  ci.yml  docker.yml  docs.yml  fuzz.yml  release.yml
.sisyphus/: boulder.json
.sisyphus/notepads/optimization-first-pass/: issues.md  learnings.md
.sisyphus/plans/: optimization-first-pass.md
desktop/: .prettierignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
desktop/src/: app.css  main.tsx  routeTree.gen.ts
desktop/src-tauri/: Cargo.toml  clippy.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
desktop/src/components/: confirm-action.tsx  copy-button.tsx  empty-state.tsx  error-state.tsx  form-input.tsx  image-crop-modal.tsx  ink-marks.tsx  markdown-message-content.tsx  message-bubble.tsx  page-frame.tsx  sidebar.tsx  skeleton-loader.tsx  stale-aware-typing-indicator.tsx  status-badge.tsx
desktop/src/lib/: admin-contract.generated.ts  api.ts  desktop-shell.ts  format.ts  i18n-core.ts  i18n.tsx  media-compress.ts  sound-engine.ts  types.ts  ui-polish.test.ts  ui-polish.ts  use-daemon-reconnect.ts  use-daemon-ws.ts  use-page-title.ts  use-sound.ts  ws-types.ts
desktop/src/locales/: en.json  ja.json
desktop/src/routes/: -companion-tab.tsx  __root.tsx  channels.tsx  companion.tsx  dashboard.tsx  index.tsx  memory.tsx  pair.tsx
desktop/src/stores/: chat.ts  connection.ts  theme.ts
desktop/src/styles/: components.css  layout.css  reset.css  tokens.css  utilities.css
docs/: astro.config.mjs  package.json  pnpm-lock.yaml
docs/public/: install.sh
docs/src/components/: Pipeline.astro
fuzz/: Cargo.toml  run.sh
fuzz/dictionaries/: command_policy.dict  normalize.dict  path_policy.dict  scrub.dict  url_validation.dict
fuzz/fuzz_targets/: fuzz_command_policy.rs  fuzz_normalize.rs  fuzz_path_policy.rs  fuzz_scrub.rs  fuzz_url_validation.rs
locales/: en.yml  ja.yml
migrations/: 001_initial_schema.sql  002_halfvec_migration.sql  003_retrieval_units_guardrails.sql  004_access_pattern_tracking.sql  005_pinned_and_temporal_decay.sql  006_memory_event_emotion_fields.sql  007_graphrag_extensions.sql  008_graphrag_ontology.sql  009_graphrag_bitemporal.sql  012_adaptive_forgetting.sql  013_edge_invalidation_index.sql  014_episode_note_hierarchy.sql  015_operator_trust_state.sql  020_drop_legacy_planner_simulation_tables.sql  021_memory_derivations.sql
scripts/: deploy.sh
scripts/dev/: check_architecture.sh  generate_admin_contract_ts.py  generate_module_map.sh  test_dockerignore.sh
scripts/eval/: README.md  persona_eval.py  scenarios.json
scripts/release/: create_public_snapshot.sh  human_like_release_gate.sh  install.sh
src/: lib.rs  main.rs
src/cli/: auth_handler.rs  mod.rs
src/cli/app/: mod.rs  (+3 more)
src/config/: mod.rs
src/contracts/: a2a.rs  affect.rs  channels.rs  experience.rs  ids.rs  inference.rs  media.rs  memory.rs  memory_domain.rs  memory_error.rs  memory_forget.rs  memory_traits.rs  mod.rs  network.rs  observability.rs  person_identity.rs  policy.rs  provider.rs  providers.rs  quality.rs  scores.rs  security.rs  session_control.rs  tenant.rs  tools.rs
src/core/: conversation_commands.rs  mod.rs
src/media/: detection.rs  mod.rs  storage.rs  types.rs
src/onboard/: api_verify.rs  auth_profile.rs  completion.rs  config_builder.rs  detect.rs  domain.rs  flow.rs  health.rs  mod.rs  postgres.rs  scaffold.rs  view.rs  wizard.rs
src/platform/: mod.rs
src/plugins/: mod.rs
src/runtime/: mod.rs
src/security/: affect_governance.rs  capability.rs  domain_trust.rs  governance.rs  kdf.rs  merkle.rs  mod.rs  pairing.rs  path_boundary.rs  permissions.rs  private_file_permissions.rs  process_spawn.rs  scrub.rs  secrets.rs  signing.rs  url_validation.rs
src/transport/: mod.rs
src/ui/: mod.rs  style.rs
src/utils/: dirs.rs  encoding.rs  http.rs  mod.rs  postgres.rs  test_env.rs  text.rs
supply-chain/: config.toml
tests/: agent.rs  cli_process_smoke.rs  eval.rs  fuzz.rs  gateway.rs  memory.rs  persona.rs  project.rs  runtime.rs
tests/agent/: action_intent.rs  autonomy_cross_layer_flow.rs  conversation_runtime_cutover.rs  external_content.rs  llm_smoke.rs  scheduler_routes.rs  tool_loop_flow.rs  turn_executor_flow.rs  turn_result_format.rs
tests/eval/: adversarial_personality.rs  character_runtime.rs  counterfactual_quality.rs  harness_ablation.rs  identity_continuity.rs  preference_coherence.rs  tom_levels.rs
tests/fuzz/: fuzz_command_policy.rs  fuzz_normalize.rs  fuzz_path_policy.rs  fuzz_scrub.rs  fuzz_tenant_policy.rs  fuzz_url_validation.rs  support.rs
tests/gateway/: auth.rs  embedding_batching.rs  ws_e2e.rs
tests/memory/: backend_compatibility.rs  backend_parity.rs  capability_contract.rs  comparison.rs  consolidation_orchestrator.rs  delete_contract.rs  governance.rs  layer_schema.rs  markdown_tagged.rs  postgres_integration.rs  provenance_validation.rs  revocation_gate.rs  tenant_recall.rs  tool_contract.rs
tests/persona/: injection_guard.rs  loop_continuity.rs  scope_regression.rs  self_task_flow.rs
tests/project/: config_schema.rs  dockerignore.rs  eval_harness.rs  inventory_scope_lock.rs  module_boundaries.rs  public_release.rs  strict_2026_policy.rs
tests/runtime/: adapter_auto.rs  adapter_docker.rs  adapter_native.rs  companion_turn_contract.rs  memory_write_paths.rs  security_guarantees.rs
tests/support/: memory_harness.rs  test_env.rs
tests/taste/: mod.rs
(+858 files in other folders)
